--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mongoose": "^5.2.2",
     "morgan": "^1.9.0",
     "uuid": "^3.3.0"
   },
@@ -19,6 +20,5 @@
     "mocha": "^5.2.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0"
-    
   }
 }
